# red

./: .gitignore  Cargo.toml  README  README.md  del.txt
examples/: ex.txt  ex2.txt  ex3.txt  ex4.txt
src/: buffer.rs  charstring.rs  input.rs  main.rs  read.rs  rope.rs  util.rs  window.rs
src/window/: bottom_bar.rs  line_num.rs  tabs.rs
