[package]
name = "r-edit"
version = "0.1.1"
authors = ["grinshpon <grinshpondaniel@protonmail.com>"]
edition = "2018"
license = "Zlib"
repository = "https://github.com/Grinshpon/red"
description = "Red: A vim-like terminal based text editor written in Rust. Extremely early in production. No functionality whatsoever yet."

[[bin]]
name = "red"
path = "src/main.rs"

include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "src/**/*",
]

[dependencies]
termion = "1.5.3"
